--- a/Portafolio_ESJimenez/src/app/componentes/header/header.component.css
+++ b/Portafolio_ESJimenez/src/app/componentes/header/header.component.css
@@ -1,3 +1,8 @@
 div{
-    background-color: black;
+    background-color: rebeccapurple;
+}
+
+app-social{
+    float: right;
+    margin-top: 25px;
 }
