--- a/Portafolio_ESJimenez/src/app/componentes/social/social.component.html
+++ b/Portafolio_ESJimenez/src/app/componentes/social/social.component.html
@@ -1,7 +1,7 @@
 <div>
     <a href="https://www.instagram.com/elsaimon_delag/?hl=es"><img src="../../../assets/instagram.png" id="instagram"></a>
-    <a href=""><img src="../../../assets/linkedin.png" id="linkedin"></a>
-    <a href=""><img src="../../../assets/facebook.png" id="facebook"></a>
-    <a href=""><img src="../../../assets/twitter.png" id="twitter"></a>
-    <a href=""><img src="../../../assets/github.png" id="github"></a>
+    <a href="https://www.linkedin.com/in/simon-jimenez-3a3981253/"><img src="../../../assets/linkedin.png" id="linkedin"></a>
+    <a href="https://www.facebook.com/simon.jimenez.7374/"><img src="../../../assets/facebook.png" id="facebook"></a>
+    <a href="https://twitter.com/saimonjimenez"><img src="../../../assets/twitter.png" id="twitter"></a>
+    <a href="https://github.com/Saimondelgymnas"><img src="../../../assets/github.png" id="github"></a>
 </div>
