--- a/Portafolio_ESJimenez/src/app/componentes/acerca-de/acerca-de.component.html
+++ b/Portafolio_ESJimenez/src/app/componentes/acerca-de/acerca-de.component.html
@@ -1,16 +1,17 @@
+
 <div class="row">
     <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
         <img src="../../../assets/fotoPerfil.jpg" class="img-fluid" id="fotoPerfil">
     </div>
-    <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
+    <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2" id="info">
         <p id="nombre">Jimenez Eneas Simón</p>
-        <p>Aka: Saimon</p>
-        <p>Full Stack Dev Jr.</p>
+        <p id="apodo">Aka: Saimon</p>
+        <p id="titulo">Full Stack Dev Jr.</p>
     </div>
-    <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8" style="text-align: center;">
+    <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8" style="text-align: center;" id="descripcion">
         <span>
             <h2>Un poco de mi:</h2>
-            <p id="descripcion">
+            <p>
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Necessitatibus totam iusto eum adipisci
                 voluptas tenetur aspernatur numquam libero perspiciatis id, ea quas asperiores itaque possimus ut dolor
                 molestiae quia quam.
