--- a/Portafolio_ESJimenez/src/app/app.component.html
+++ b/Portafolio_ESJimenez/src/app/app.component.html
@@ -1,5 +1,9 @@
+<div>
 <app-header></app-header>
 <app-acerca-de></app-acerca-de>
 <app-experiencia></app-experiencia>
 <app-educacion></app-educacion>
 <app-porcentajes></app-porcentajes>
+<app-proyectos></app-proyectos>
+<app-footer></app-footer>
+</div>
