--- a/Portafolio_ESJimenez/src/app/componentes/banner/banner.component.html
+++ b/Portafolio_ESJimenez/src/app/componentes/banner/banner.component.html
@@ -1,3 +1,5 @@
-<div>
+<div class="row">
+    <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
     <img src="../../../assets/banner.jpeg" id="banner">
+    </div>
 </div>
