--- a/Portafolio_ESJimenez/src/app/componentes/header/header.component.css
+++ b/Portafolio_ESJimenez/src/app/componentes/header/header.component.css
@@ -1,8 +1,11 @@
+
+
 div{
     background-color: #1597F7;
 }
 
-app-social{
-    float: right;
-    margin-top: 25px;
+app-banner{
+    width: 100%;
+    height: 600px;
 }
+
