--- a/Portafolio_ESJimenez/src/app/componentes/logo-ap/logo-ap.component.html
+++ b/Portafolio_ESJimenez/src/app/componentes/logo-ap/logo-ap.component.html
@@ -1,1 +1,33 @@
-<img src="../../../assets/APLogo.png" id="LogoAP">
+<div>
+    <div class="container">
+        <div class="logo">
+            <img src="../../../assets/APLogo.png" id="LogoAP">
+        </div>
+        <div class="redes">
+            <div>
+                <a href="https://www.instagram.com/elsaimon_delag/?hl=es"><img src="../../../assets/instagram.png"
+                        id="instagram"></a>
+                <a href="https://www.linkedin.com/in/simon-jimenez-3a3981253/"><img src="../../../assets/linkedin.png"
+                        id="linkedin"></a>
+                <a href="https://www.facebook.com/simon.jimenez.7374/"><img src="../../../assets/facebook.png"
+                        id="facebook"></a>
+                <a href="https://twitter.com/saimonjimenez"><img src="../../../assets/twitter.png" id="twitter"></a>
+                <a href="https://github.com/Saimondelgymnas"><img src="../../../assets/github.png" id="github"></a>
+            </div>
+
+        </div>
+        <div>
+            <button class="learn-more">
+                <span class="circle" aria-hidden="true">
+                <span class="icon arrow"></span>
+                </span>
+                <span class="button-text">Login</span>
+              </button>
+        </div>
+
+
+
+    </div>
+
+
+</div>
