--- a/Portafolio_ESJimenez/src/app/componentes/porcentajes/porcentajes.component.html
+++ b/Portafolio_ESJimenez/src/app/componentes/porcentajes/porcentajes.component.html
@@ -157,4 +157,13 @@
     </circle-progress>
 </div>
 
+<div class="text-center col-sm-4 col-md-4 col-lg-3">
+    <circle-progress id="Html" [percent]="50" [title]="'placeholder'" [radius]="100" [outerStrokeWidth]="16"
+        [innerStrokeWidth]="8" [outerStrokeColor]="'#78C000'" [innerStrokeColor]="'#C7E596'" [animation]="true"
+        [lazy]="true" [imageSrc]="'../assets/comunicacion.png'" [imageWidth]="80" [imageHeight]="80" [animationDuration]="700"
+        [titleFontSize]="'1em'" [showImage]="true">
+
+    </circle-progress>
+</div>
+
 </div>
