cambios en acerca de y termina netbeans (prueba de postman)

--- a/Portafolio_ESJimenez/FrontEnd/src/app/componentes/acerca-de/acerca-de.component.html
+++ b/Portafolio_ESJimenez/FrontEnd/src/app/componentes/acerca-de/acerca-de.component.html
@@ -1,22 +1,32 @@
 
 <div class="row">
     <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
+        
         <img src="../../../assets/fotoPerfil.jpg" class="img-fluid" id="fotoPerfil">
     </div>
     <div class="col-xs-12 col-sm-2 col-md-5 col-lg-2" id="info">
-        <p id="nombre">Jimenez Eneas Simón</p>
-        <p id="apodo">Aka: Saimon</p>
-        <p id="titulo">Full Stack Dev Jr.</p>
+        <div class="card">
+            <p><span>Jimenez Eneas Simón</span></p>
+            <p><span>Aka: Saimon</span></p>
+            <p><span>Full Stack Dev Jr.</span></p>
+        </div>
+
+
+
     </div>
     <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8" style="text-align: center;" id="descripcion">
-        <span>
-            <h2>Un poco de mi:</h2>
-            <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Necessitatibus totam iusto eum adipisci
-                voluptas tenetur aspernatur numquam libero perspiciatis id, ea quas asperiores itaque possimus ut dolor
-                molestiae quia quam.
-            </p>
-
-        </span>
+        <div class="flip">
+            <div class="content">
+                <div class="front">
+                    
+                    <h2>Un poco de mi:</h2>
+                    
+                </div>
+                <div class="back">
+                    
+                    <p>Soy un desarrollador en contante proceso de aprendizaje, constantemente eprendiento tanto de metodos y lenguajes como de fuentes para obtener recursos y herramientas</p>                
+                </div>
+            </div>
+        </div>
     </div>
 </div>
