--- a/Portafolio_ESJimenez/FrontEnd/src/app/componentes/acerca-de/acerca-de.component.css
+++ b/Portafolio_ESJimenez/FrontEnd/src/app/componentes/acerca-de/acerca-de.component.css
@@ -1,12 +1,73 @@
 .row{
     padding: 10px;
-}
-/*color para el cuerpo acerca de*/
-
-div{
     background-color: #1597F7;
-    
 }
+
+
+
+.card {
+    width: 230px;
+    height: 254px;
+    border-radius: 4px;
+    background: #212121;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    gap: 5px;
+    padding: .4em;
+  }
+  
+  .card p {
+    height: 100%;
+    -webkit-box-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
+    overflow: hidden;
+    cursor: pointer;
+    border-radius: 2px;
+    -webkit-transition: all .5s;
+    transition: all .5s;
+    background: #212121;
+    border: 1px solid #ff5a91;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  
+  .card p:hover {
+    -webkit-box-flex: 4;
+        -ms-flex: 4;
+            flex: 4;
+  }
+  
+  .card p span {
+    min-width: 14em;
+    padding: .5em;
+    text-align: center;
+    -webkit-transform: rotate(-90deg);
+        -ms-transform: rotate(-90deg);
+            transform: rotate(-90deg);
+    -webkit-transition: all .5s;
+    transition: all .5s;
+    text-transform: uppercase;
+    color: #ff568e;
+    letter-spacing: .1em;
+  }
+  
+  .card p:hover span {
+    -webkit-transform: rotate(0);
+        -ms-transform: rotate(0);
+            transform: rotate(0);
+  }
+
+
+
 
 @media (min-width: 576px){
     #fotoPerfil{
@@ -20,6 +81,10 @@ div{
 }
 
 @media (max-width: 576px){
+
+
+
+
     #fotoPerfil{
 
         position: absolute;
@@ -47,12 +112,103 @@ div{
 }
 
 
-#nombre{
-    font-size: large;
-    font-weight: bold;
-    margin-top: 20%;
-    margin-left: 5px;
-}
+
+.flip {
+    -webkit-box-shadow: 0 0 10px rgba(128, 128, 128, 0.5);
+            box-shadow: 0 0 10px rgba(128, 128, 128, 0.5);
+    padding: 1em;
+    width: 190px;
+    height: 254px;
+    -webkit-transform-style: preserve-3d;
+            transform-style: preserve-3d;
+    -webkit-transition: 3s ease;
+    transition: 3s ease;
+  }
+  
+  .flip:hover {
+    -webkit-transform: rotateY(180deg);
+            transform: rotateY(180deg);
+  }
+  /* Content */
+  .flip .content {
+    -webkit-transform-style: preserve-3d;
+            transform-style: preserve-3d;
+  }
+  
+  .flip .back, .flip .front {
+    -webkit-transform-style: preserve-3d;
+            transform-style: preserve-3d;
+    -webkit-backface-visibility: hidden;
+            backface-visibility: hidden;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  
+  .flip .back {
+    -webkit-transform: rotateY(180deg);
+            transform: rotateY(180deg);
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+  }
+  
+  .flip h2,
+  .flip p {
+    -webkit-transform: translateZ(90px);
+            transform: translateZ(90px);
+    text-shadow: 0 0 3px black;
+    text-align: center;
+  }
+  
+  .flip h2 {
+    font-size: 3em;
+    color: #fff;
+    letter-spacing: 1px;
+  }
+  
+  .flip p {
+    font-size: 1em;
+    color: #eee;
+    line-height: 1.6em;
+  }
+  
+  .flip::before,
+  .flip::after {
+    content: "";
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    position: absolute;
+    background-image: -webkit-linear-gradient(linear, left top, left bottom, from(purple), to(red));
+    background-image: linear-gradient(purple, red);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    -webkit-transform: rotateY(180deg)translateZ(1px);
+            transform: rotateY(180deg)translateZ(1px);
+  }
+  
+  .flip::before {
+    -webkit-transform: none;
+        -ms-transform: none;
+            transform: none;
+    background-image: -webkit-linear-gradient(linear, left top, left bottom, from(violet), to(orange));
+    background-image: linear-gradient(violet, orange);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+
+
+
 
 
 
