Cambio boton login y arreglo typeos

--- a/Portafolio_ESJimenez/FrontEnd/src/app/componentes/acerca-de/acerca-de.component.html
+++ b/Portafolio_ESJimenez/FrontEnd/src/app/componentes/acerca-de/acerca-de.component.html
@@ -24,7 +24,7 @@
                 </div>
                 <div class="back">
                     
-                    <p>Soy un desarrollador en contante proceso de aprendizaje, constantemente eprendiento tanto de metodos y lenguajes como de fuentes para obtener recursos y herramientas</p>                
+                    <p>Soy un desarrollador en constante proceso de aprendizaje, aprendiendo tanto de metodos y lenguajes como de fuentes para obtener recursos y herramientas</p>                
                 </div>
             </div>
         </div>
