--- a/Portafolio_ESJimenez/FrontEnd/src/app/componentes/logo-ap/logo-ap.component.html
+++ b/Portafolio_ESJimenez/FrontEnd/src/app/componentes/logo-ap/logo-ap.component.html
@@ -16,14 +16,10 @@
             </div>
 
         </div>
-        <div>
-            <button class="learn-more">
-                <span class="circle" aria-hidden="true">
-                <span class="icon arrow"></span>
-                </span>
-                <span class="button-text">Login</span>
-              </button>
-        </div>
+        
+        
+        <button> LOGIN
+        </button>
 
 
 
