conexion base de datos y termina educacion

--- a/Portafolio_ESJimenez/FrontEnd/src/app/componentes/acerca-de/acerca-de.component.html
+++ b/Portafolio_ESJimenez/FrontEnd/src/app/componentes/acerca-de/acerca-de.component.html
@@ -7,7 +7,7 @@
     <div class="col-lg-1"></div>
     <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4" id="info">
         <div class="card">
-            <p><span>Jimenez Eneas Simón</span></p>
+            <p><span id="nombre">{{person.nombre}} {{person.apellido}}</span></p>
             <p><span>Aka: Saimon</span></p>
             <p><span>Full Stack Dev Jr.</span></p>
         </div>
