--- a/Portafolio_ESJimenez/FrontEnd/src/app/componentes/educacion/educacion.component.html
+++ b/Portafolio_ESJimenez/FrontEnd/src/app/componentes/educacion/educacion.component.html
@@ -4,42 +4,30 @@
     <div class="col-lg-11">
         <ul>
             <li>
-                <h1>Titulo 1</h1> - <h3>anioi-aniof</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe nemo repellendus eius pariatur tempore
-                    consequatur? Similique expedita, hic est inventore facilis alias ad! Nesciunt assumenda quaerat
-                    neque odit ad aliquid!</p>
+                <h1>Egresado Colegio Gymnasium U.N.T.</h1> - <h3>2019</h3>
+                <p>Titulo secundario, con promedio 7.63</p>
             </li>
             <li>
-                <h1>Titulo 2</h1> - <h3>anioi-aniof</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe nemo repellendus eius pariatur tempore
-                    consequatur? Similique expedita, hic est inventore facilis alias ad! Nesciunt assumenda quaerat
-                    neque odit ad aliquid!</p>
+                <h1>Egresado ATICANA</h1> - <h3>2015</h3>
+                <p>Instituto de inglés</p>
             </li>
             <li>
-                <h1>Titulo 3</h1> - <h3>anioi-aniof</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe nemo repellendus eius pariatur tempore
-                    consequatur? Similique expedita, hic est inventore facilis alias ad! Nesciunt assumenda quaerat
-                    neque odit ad aliquid!</p>
+                <h1>Reanimación Cardiopulmonar</h1> - <h3>2019</h3>
+                <p>Curso realizado para enfermeria de campamento Gymnasium</p>
             </li>
             <li>
-                <h1>Titulo 4</h1> - <h3>anioi-aniof</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe nemo repellendus eius pariatur tempore
-                    consequatur? Similique expedita, hic est inventore facilis alias ad! Nesciunt assumenda quaerat
-                    neque odit ad aliquid!</p>
+                <h1>Egresado Argentina Programa</h1> - <h3>En progreso...</h3>
+                <p>Plan nacional para generar Fullstack Devs.</p>
             </li>
 
             <li>
-                <h1>Titulo 4</h1> - <h3>anioi-aniof</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe nemo repellendus eius pariatur tempore
-                    consequatur? Similique expedita, hic est inventore facilis alias ad! Nesciunt assumenda quaerat
-                    neque odit ad aliquid!</p>
+                <h1>Tecnico superior en criminalistica</h1> - <h3>En progreso...</h3>
+                <p>Realizado en el colegio Almafuerte</p>
             </li>
 
             <li>
-                <h1>Titulo 4</h1> - <h3>anioi-aniof</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe nemo repellendus eius pariatur tempore
-                    consequatur? Similique expedita, hic est inventore facilis alias ad! Nesciunt assumenda quaerat
-                    neque odit ad aliquid!</p>
+                <h1>Ingeniero Biomédico</h1> - <h3>En progreso...</h3>
+                <p>Realizado en la facultad de ciencias exactas perteneciente a la Universidad Nacional de Tucumán</p>
             </li>
 
         </ul>
