--- a/Portafolio_ESJimenez/FrontEnd/src/app/app.component.html
+++ b/Portafolio_ESJimenez/FrontEnd/src/app/app.component.html
@@ -1,9 +1,4 @@
 <div>
-<app-header></app-header>
-<app-acerca-de></app-acerca-de>
-<app-experiencia></app-experiencia>
-<app-educacion></app-educacion>
-<app-porcentajes></app-porcentajes>
-<app-proyectos></app-proyectos>
-<app-footer></app-footer>
+<router-outlet></router-outlet>
+
 </div>
