--- a/Portafolio_ESJimenez/FrontEnd/src/app/componentes/logo-ap/logo-ap.component.html
+++ b/Portafolio_ESJimenez/FrontEnd/src/app/componentes/logo-ap/logo-ap.component.html
@@ -5,19 +5,26 @@
         </div>
         <div class="redes">
             <div>
-                <a href="https://www.instagram.com/elsaimon_delag/?hl=es"><img src="../../../assets/instagram.png"
+                <a href="https://www.instagram.com/elsaimon_delag/?hl=es" target="_blank"><img src="../../../assets/instagram.png"
                         id="instagram"></a>
-                <a href="https://www.linkedin.com/in/simon-jimenez-3a3981253/"><img src="../../../assets/linkedin.png"
+                <a href="https://www.linkedin.com/in/simon-jimenez-3a3981253/" target="_blank"><img src="../../../assets/linkedin.png"
                         id="linkedin"></a>
-                <a href="https://www.facebook.com/simon.jimenez.7374/"><img src="../../../assets/facebook.png"
+                <a href="https://www.facebook.com/simon.jimenez.7374/" target="_blank"><img src="../../../assets/facebook.png"
                         id="facebook"></a>
-                <a href="https://twitter.com/saimonjimenez"><img src="../../../assets/twitter.png" id="twitter"></a>
-                <a href="https://github.com/Saimondelgymnas"><img src="../../../assets/github.png" id="github"></a>
+                <a href="https://twitter.com/saimonjimenez" target="_blank"><img src="../../../assets/twitter.png" id="twitter"></a>
+                <a href="https://github.com/Saimondelgymnas" target="_blank"><img src="../../../assets/github.png" id="github"></a>
             </div>
         </div>
         
         
-        <button> LOGIN
+        <button> <a href="/login">LOGIN
+            <style type="text/css">
+                a:link {text-decoration-line: none; color: white;}      /* unvisited link */
+                a:visited {text-decoration-line: none; color: white;}   /* visited link */
+                a:hover {text-decoration-line: none; color: white;}     /* mouse over link */
+                a:active {text-decoration-line: none; color: white;}    /* selected link */
+             </style>
+        </a>
         </button>
 
 
