--- a/Portafolio_ESJimenez/FrontEnd/src/app/componentes/login/login.component.html
+++ b/Portafolio_ESJimenez/FrontEnd/src/app/componentes/login/login.component.html
@@ -1,6 +1,18 @@
-<form class="login">
-    <input type="text" placeholder="Usuario">
-    <input type="password" placeholder="Contraseña">
-    <button>Login</button>
-  </form>
-  
+
+<form class="login" #f="ngForm" (ngSubmit)="onLogin()" novalidate>
+  <div class="form-outline form-white mb-4">
+    <input type="user" id="nombreUsuario" name="nombreUsuario" class="form-control form-control-lg"
+      [(ngModel)]="nombreUsuario" name="nombreUsuario" required />
+    <label class="form-label" for="nombreUsuario">Usuario</label>
+  </div>
+
+  <div class="form-outline form-white mb-4">
+    <input type="password" id="password" class="form-control form-control-lg" [(ngModel)]="password" name="password"
+      required/>
+
+    <label class="form-label" for="password">Contraseña</label>
+  </div>
+  <button type="submit">
+    LOGIN
+  </button>
+</form>
